# retronym (C) copyright Kroc Camen 2017, 2018
# BSD 2-clause licence; see LICENSE.TXT

[package]
name = "retronym"
version = "0.0.0"
edition = "2018"
authors = ["Kroc Camen <kroc@camendesign.com>"]
repository = "https://github.com/Kroc/retronym"
# project is unfinished -- do not accidently push to crates.io
publish = false
readme = "README.md"
categories = ["parsing", "parser-implementations", "games", "game-engines", "hardware-support"]
license = "BSD-2-Clause"

[dependencies]
pest = "2.0.2"
pest_derive = "2.0.1"
itertools = "0.8.0"

[[bin]]
name = "retronym"
path = "src/main.rs"
doc = false
doctest = false
test = false
bench = false

[lib]
name = "retronym"
path = "src/lib/lib.rs"
doc = true
doctest = false
test = false
bench = false

[profile.release]
panic = 'abort'
lto = true
opt-level = 3